# M4ML-2025-Normalizing-Flows

./: README.md  main.py  pyproject.toml
normalizing_flows/: affine_coupling.py  config.py  normalizing_flows.ipynb  train.py
