[project]
name = "m4ml-2025-normalizing-flows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "pip>=25.1.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
]

[project.scripts]
train = "normalizing_flows.train:main"
